[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lexy"
version = "0.3.1"
description = "Lexy is a lightweight CLI tool that fetches programming tutorials from 'Learn X in Y Minutes' directly into your terminal. Quickly search, learn, and reference code examples without leaving your workflow."
readme = "README.md"
license = "MIT"
authors = [{ name = "Antonio Rodriguez", email = "antonioinorge@hotmail.com" }]
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.13.4",
  "click>=8.1.8",
  "requests>=2.32.3",
  "typer>=0.15.3",
]

[project.optional-dependencies]
docs = [
  "mkdocs>=1.5.3",
  "mkdocs-material>=9.5.18",
  "mkdocs-awesome-nav>=3.1.1"
]

[project.urls]
Repository = "https://github.com/antoniorodr/lexy"
Issues = "https://github.com/antoniorodr/lexy/issues"

[project.scripts]
lexy = "lexy.lexy:lexy"

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]

