[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lexy"
authors = [
  { name = "Antonio Rodriguez", email = "kontakt@antoniorodriguez.no" },
]
description = "Lexy is a lightweight CLI tool that fetches programming tutorials from 'Learn X in Y Minutes' directly into your terminal. Quickly search, learn, and reference code examples without leaving your workflow."
version = "0.5.3"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.13.4",
  "click>=8.1.8",
  "requests>=2.32.3",
  "tomlkit>=0.13.3",
  "typer>=0.15.3",
]

[project.urls]
Repository = "https://github.com/antoniorodr/lexy"
Issues = "https://github.com/antoniorodr/lexy/issues"

[project.scripts]
lexy = "lexy.lexy:lexy"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "--cov=lexy --cov=lexy_helpers --cov-report=term-missing --cov-report=lcov:coverage.lcov"

[dependency-groups]
dev = [
  "zensical>=0.0.26",
  "pytest-cov>=7.0.0",
  "pytest-asyncio>=1.2.0",
  "pytest>=8.3.5",
]
